changed first podcast tag to football and minified css

--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -1,11 +1,11 @@
 +++
 author = "Sir Lawrence Davis"
-categories = ["football"]
+categories = ["footballs"]
 date = "2016-02-23T13:56:10-06:00"
 description = "tpvsports.net's Awesome Hugo Site"
 episode = "1"
 publishdate = "2016-02-03"
-tags = ["sports"]
+tags = ["football"]
 title = "Episode One Show Title"
 slug = "ep1-show-title"
 soundcloud = "245753011"
