--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -1,13 +1,12 @@
 ---
 title: The Everyday Voice
-slug: ep1-the-everyday-voice
+slug: the-everyday-voice
 author: Sir Lawrence Davis
 episode: 1
 soundcloud: "245753011"
 description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss: Superbowl 50 Preview; Cam Newton; OKC Thunder vs. Golden State Warriors Preview"
 categories: "football, basketball"
 tags: "football, basketball, superbowl"
-cmsUserSlug: the-everyday-voice
 date: now
 publishdate: 2016-02-06T14:00:00-06:00
 ---
