--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -10,7 +10,7 @@ tags:
   - football
   - basketball
   - superbowl
-description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss: \nSuperbowl 50 Preview; Cam Newton; OKC Thunder vs. Golden State Warriors Preview"
+description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss Super Bowl 50; Cam Newton; and the OKC Thunder vs. Golden State Warriors"
 cmsUserSlug: the-everyday-voice
 date: 2016-02-06T20:00:00.000Z
 slug: the-everyday-voice
