--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -11,9 +11,9 @@ tags:
   - basketball
   - superbowl
 description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss Super Bowl 50; Cam Newton; and the OKC Thunder vs. Golden State Warriors"
-cmsUserSlug: the-everyday-voice
+cmsUserSlug: the-everyday-voice1
 date: 2016-02-06T20:00:00.000Z
-slug: the-everyday-voice
+slug: the-everyday-voice2
 publishdate: 2016-02-06T20:00:00.000Z
 ---
 
