Updated Post The Everyday Voice

--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -10,7 +10,7 @@ tags:
   - football
   - basketball
   - superbowl
-description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss Super Bowl 50; Cam Newton; and the OKC Thunder vs. Golden State Warriors"
+description: "Listen to the latest episode of The People's Voice Sportscast, where we discuss [Super Bowl 50](https://soundcloud.com/tpvsports/ep-1#t=2:13); Cam Newton; and the OKC Thunder vs. Golden State Warriors"
 cmsUserSlug: the-everyday-voice
 date: 2016-02-06T20:00:00.000Z
 slug: the-everyday-voice
