updated content pages to distinguish between the description and page content.

--- a/content/podcast/2016-02-06-ep1-title.md
+++ b/content/podcast/2016-02-06-ep1-title.md
@@ -2,19 +2,16 @@
 author = "Sir Lawrence Davis"
 cmsUserSlug = "the-everyday-voice"
 date = "2016-02-06T20:00:00+00:00"
-description = """
+description = "Listen to the latest episode of The People's Voice Sportscast, where we discuss: Super Bowl 50, Cam Newton and The OKC Thunder vs. Golden State Warriors."
+draft = false
+episode = "1"
+soundcloud = "245753011"
+tags = ["football", "basketball", "superbowl"]
+title = "The Everyday Voice"
++++
 Listen to the latest episode of The People's Voice Sportscast, where we discuss: 
 
 
 - Super Bowl 50 (2:13)
 - Cam Newton (7:27) **and** 
 - The OKC Thunder vs. Golden State Warriors
-
-"""
-draft = false
-episode = "1"
-soundcloud = "245753011"
-tags = ["football", "basketball", "superbowl"]
-title = "The Everyday Voice"
-
-+++
